# lunatic-python

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.luarocks  README  README.md  lunatic-python-scm-0.rockspec  python.lua  setup.py  test.py
.github/workflows/: ci.yml  luarocks_make.yml
rockspecs/: lunatic-python-1.0-1.rockspec
src/: CMakeLists.txt  luainpython.c  luainpython.h  pythoninlua.c  pythoninlua.h
tests/: test_lua.py  test_lua_via_pytest.py  test_py.lua
